# CCFuser

./: README.md  nvshmem_src_2.9.0-2.tar.xz
mix_moe/: setup.py
mix_moe/ae/: 1  fig10_data.sh  fig10_plot.py  fig11_data.sh  fig11_plot.py  fig12_data.sh  fig12_plot.py  preprocess_fig11_data.sh
mix_moe/ae/output_data/: e2e_model.csv  fig11_data.txt  kernel_eval_expert.csv  kernel_eval_expert.txt  kernel_eval_nvlink.csv  kernel_eval_nvlink.txt  moe_layer_pcie.csv
mix_moe/csrc/: CMakeLists.txt  mix_moe.cpp  mix_moe.h  pos.pt  pybind.cpp  stream_manager.cpp  stream_manager.h  test.cpp
mix_moe/csrc/cuda/: global_exchange.cpp  global_exchange.h  helper_cuda.h  local_exchange.cu  local_exchange.cuh  mix_gemm.cu  mix_gemm.cuh  mix_moe_kernel.cu  mix_moe_kernel.cuh
mix_moe/mix_moe/: __init__.py  all_expert_count.pt  functions.py  kernel_evaluation.py  layers.py  linear.py  start.sh  t.py  test.py  transformer.py  utils.py
mix_moe/mix_moe/examples/: fast_moe_pcie.txt  faster_moe_ddp.py  faster_moe_pcie.txt  faster_moe_pcie_1.txt  mix_moe_ddp.py  mix_moe_pcie.txt  output_pcie_1.txt  output_pcie_2.txt  output_pcie_3.txt  output_pcie_4.txt  test.sh  test_mutil_node_mpi.sh
mix_moe/mix_moe/examples/models/: bert_input.pt  gpt2_data.pt  moe_bert.py  moe_bert_ddp.py  moe_gpt.py  moe_gpt_ddp.py
mix_moe/mix_moe/examples/transformer-xl/: mem_transformer.py  mem_transformer_mix_moe.py  output_3.txt  start.sh  train.py  train_ddp.py
mix_moe/mix_moe/examples/transformer-xl/scripts/: getdata.sh  log_1.txt  output_3.txt  run_enwik8_base.sh  run_enwik8_base_moe.sh  run_enwik8_large.sh  tmp.txt
mix_moe/mix_moe/examples/transformer-xl/scripts/test/: cuda0.txt  cuda1.txt  cuda2.txt  cuda3.txt  log_1.txt
mix_moe/mix_moe/examples/transformer-xl/utils/: exp_utils.py  vocabulary.py
mix_moe/mix_moe/gates/: __init__.py  naive_gate.py
(+3 files in other folders)
